Fixed invisible button/icon when they placed above focused input

--- a/web/css/abstracts/mixins/_tabs.less
+++ b/web/css/abstracts/mixins/_tabs.less
@@ -67,6 +67,9 @@
             .lib-css(background, @tab-toggler__hover__background);
             .lib-css(color, @tab-toggler__hover__color);
         }
+        &:focus-visible {
+            z-index: 10;
+        }
     }
 }
 .breeze-tab-toggler-horizontal {
