--- a/web/css/base/_reset.less
+++ b/web/css/base/_reset.less
@@ -358,7 +358,6 @@
     }
     :where(:focus-visible) {
         .breeze-focus-ring();
-        z-index: 10;
     }
 
     select:not([multiple]) {
